--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
+    "@studio-freight/hamo": "^0.6.28",
+    "@studio-freight/lenis": "^1.0.39",
+    "aos": "^2.3.4",
+    "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
+    "next": "14.1.3",
+    "rallax.js": "^2.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-faq-component": "^1.3.4",
+    "react-indiana-drag-scroll": "^2.2.0",
+    "rolly.js": "^0.4.0",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
