--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "split-type": "^0.3.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
